Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntegerTextField.quorum
class Main
    integer v = Test()
    action Main
    end

    action Test() returns integer
        text var = "text"
        return var
    end
end